// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputModal should render with a blank input field 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "backgroundColor": "#000000",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />,
  <View
    collapsable={false}
    style={
      [
        {
          "alignSelf": "flex-end",
          "backgroundColor": "rgba(255, 255, 255, .37)",
          "borderTopLeftRadius": 22,
          "borderTopRightRadius": 22,
          "flexShrink": 1,
          "overflow": "hidden",
          "paddingLeft": 11,
          "paddingRight": 11,
          "width": 674,
        },
        {
          "transform": [
            {
              "translateY": 1334,
            },
          ],
        },
        {
          "borderColor": "rgba(255, 255, 255, 0)",
          "borderWidth": 0,
          "marginBottom": -86,
          "paddingBottom": 97,
          "paddingTop": 0,
        },
      ]
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      overlayColor="rgba(0, 0, 0, 0)"
      style={
        [
          {
            "backgroundColor": undefined,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 16,
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "hsla(0, 0%, 53%, 0.3)",
            "borderRadius": 3,
            "height": 6,
            "marginTop": 6,
            "width": 67,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "marginBottom": 11,
          "marginTop": 28,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={2}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "flexShrink": 1,
              "fontFamily": "Quicksand-Medium",
              "fontSize": 27,
              "marginHorizontal": 11,
            },
            null,
          ]
        }
      >
        title
      </Text>
    </View>
    <View
      fullHeight={false}
      style={
        {
          "flexGrow": undefined,
          "flexShrink": 1,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={false}
        numberOfLines={0}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
            false,
            null,
          ]
        }
      >
        message
      </Text>
      <View
        marginRemStyle={
          {
            "marginBottom": 11,
            "marginLeft": 11,
            "marginRight": 11,
            "marginTop": 11,
          }
        }
        multiline={false}
        style={
          {
            "flexGrow": undefined,
            "flexShrink": undefined,
            "marginBottom": 11,
            "marginLeft": 11,
            "marginRight": 11,
            "marginTop": 11,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={false}
          disableAnimation={
            {
              "value": 0,
            }
          }
          focusAnimation={
            {
              "value": 0,
            }
          }
          focusable={true}
          multiline={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          scale={
            {
              "value": 1,
            }
          }
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 11,
                "borderWidth": 1,
                "flexDirection": "row",
                "flexGrow": undefined,
                "flexShrink": undefined,
                "paddingHorizontal": 17,
              },
              {
                "backgroundColor": undefined,
                "borderColor": undefined,
                "marginHorizontal": undefined,
                "opacity": undefined,
                "paddingVertical": 22,
              },
            ]
          }
        >
          <View
            scale={
              {
                "value": 0,
              }
            }
            style={
              [
                {
                  "alignItems": "stretch",
                  "aspectRatio": 1,
                },
                {
                  "opacity": 0,
                  "width": 0,
                },
              ]
            }
          />
          <View
            focusValue={
              {
                "value": 0,
              }
            }
            hasPlaceholder={false}
            style={
              [
                {
                  "alignItems": "flex-start",
                  "alignSelf": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "left": 0,
                },
                {
                  "marginBottom": undefined,
                  "marginTop": undefined,
                },
              ]
            }
          >
            <TextInput
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              animated={true}
              autoFocus={true}
              disableAnimation={
                {
                  "value": 0,
                }
              }
              editable={true}
              focusAnimation={
                {
                  "value": 0,
                }
              }
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              scale={
                {
                  "value": 1,
                }
              }
              selectionColor="#FFFFFF"
              style={
                [
                  {
                    "color": "hsla(0, 0%, 100%, 0.20)",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontFamily": "Quicksand-Regular",
                    "margin": 0,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "transform": [
                      {
                        "translateY": -0,
                      },
                    ],
                  },
                  {
                    "color": undefined,
                    "fontSize": 22,
                  },
                ]
              }
              testID="undefined.textInput"
              textAlignVertical="top"
              value=""
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "marginHorizontal": -22,
                "marginVertical": -28,
                "opacity": 1,
                "paddingHorizontal": 22,
                "paddingVertical": 28,
              }
            }
            testID="undefined.clearIcon"
          >
            <View
              scale={
                {
                  "value": 0,
                }
              }
              style={
                [
                  {
                    "alignItems": "stretch",
                    "aspectRatio": 1,
                  },
                  {
                    "opacity": 0,
                    "width": 0,
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "anticon",
                    "fontSize": 0,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        absolute={false}
        layout="column"
        parentType="modal"
        style={
          {
            "alignItems": "stretch",
            "alignSelf": "center",
            "flexDirection": "column",
            "margin": 11,
            "marginBottom": 22,
            "marginTop": 45,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexBasis": "auto",
              "flexGrow": 0,
              "flexShrink": 0,
              "justifyContent": "center",
              "margin": -11,
              "opacity": 1,
              "padding": 11,
            }
          }
        >
          <BVLinearGradient
            colors={
              [
                4280299823,
                4278214733,
              ]
            }
            endPoint={
              {
                "x": 1,
                "y": 0,
              }
            }
            locations={null}
            startPoint={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 34,
                  "flexDirection": "row",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "justifyContent": "center",
                },
                {
                  "alignSelf": "stretch",
                },
                {
                  "height": 67,
                  "paddingHorizontal": 34,
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <Text
              adjustsFontSizeToFit={true}
              minimumFontScale={0.65}
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "includeFontPadding": false,
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Medium",
                      "fontSize": 22,
                    },
                    null,
                  ],
                  null,
                ]
              }
            >
              Submit
            </Text>
          </BVLinearGradient>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`TextInputModal should render with a populated input field 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "backgroundColor": "#000000",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />,
  <View
    collapsable={false}
    style={
      [
        {
          "alignSelf": "flex-end",
          "backgroundColor": "rgba(255, 255, 255, .37)",
          "borderTopLeftRadius": 22,
          "borderTopRightRadius": 22,
          "flexShrink": 1,
          "overflow": "hidden",
          "paddingLeft": 11,
          "paddingRight": 11,
          "width": 674,
        },
        {
          "transform": [
            {
              "translateY": 1334,
            },
          ],
        },
        {
          "borderColor": "rgba(255, 255, 255, 0)",
          "borderWidth": 0,
          "marginBottom": -86,
          "paddingBottom": 97,
          "paddingTop": 0,
        },
      ]
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      overlayColor="rgba(0, 0, 0, 0)"
      style={
        [
          {
            "backgroundColor": undefined,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 16,
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "hsla(0, 0%, 53%, 0.3)",
            "borderRadius": 3,
            "height": 6,
            "marginTop": 6,
            "width": 67,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "marginBottom": 11,
          "marginTop": 28,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={2}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "flexShrink": 1,
              "fontFamily": "Quicksand-Medium",
              "fontSize": 27,
              "marginHorizontal": 11,
            },
            null,
          ]
        }
      >
        title
      </Text>
    </View>
    <View
      fullHeight={false}
      style={
        {
          "flexGrow": undefined,
          "flexShrink": 1,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={false}
        numberOfLines={0}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
            false,
            null,
          ]
        }
      >
        message
      </Text>
      <View
        marginRemStyle={
          {
            "marginBottom": 11,
            "marginLeft": 11,
            "marginRight": 11,
            "marginTop": 11,
          }
        }
        multiline={false}
        style={
          {
            "flexGrow": undefined,
            "flexShrink": undefined,
            "marginBottom": 11,
            "marginLeft": 11,
            "marginRight": 11,
            "marginTop": 11,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={false}
          disableAnimation={
            {
              "value": 0,
            }
          }
          focusAnimation={
            {
              "value": 0,
            }
          }
          focusable={true}
          multiline={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          scale={
            {
              "value": 1,
            }
          }
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 11,
                "borderWidth": 1,
                "flexDirection": "row",
                "flexGrow": undefined,
                "flexShrink": undefined,
                "paddingHorizontal": 17,
              },
              {
                "backgroundColor": undefined,
                "borderColor": undefined,
                "marginHorizontal": undefined,
                "opacity": undefined,
                "paddingVertical": 22,
              },
            ]
          }
        >
          <View
            scale={
              {
                "value": 0,
              }
            }
            style={
              [
                {
                  "alignItems": "stretch",
                  "aspectRatio": 1,
                },
                {
                  "opacity": 0,
                  "width": 0,
                },
              ]
            }
          />
          <View
            focusValue={
              {
                "value": 1,
              }
            }
            hasPlaceholder={false}
            style={
              [
                {
                  "alignItems": "flex-start",
                  "alignSelf": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "left": 0,
                },
                {
                  "marginBottom": undefined,
                  "marginTop": undefined,
                },
              ]
            }
          >
            <TextInput
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              animated={true}
              autoFocus={true}
              disableAnimation={
                {
                  "value": 0,
                }
              }
              editable={true}
              focusAnimation={
                {
                  "value": 0,
                }
              }
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              scale={
                {
                  "value": 1,
                }
              }
              selectionColor="#FFFFFF"
              style={
                [
                  {
                    "color": "hsla(0, 0%, 100%, 0.20)",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontFamily": "Quicksand-Regular",
                    "margin": 0,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "transform": [
                      {
                        "translateY": -0,
                      },
                    ],
                  },
                  {
                    "color": undefined,
                    "fontSize": 22,
                  },
                ]
              }
              testID="undefined.textInput"
              textAlignVertical="top"
              value="initialValue"
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "marginHorizontal": -22,
                "marginVertical": -28,
                "opacity": 1,
                "paddingHorizontal": 22,
                "paddingVertical": 28,
              }
            }
            testID="undefined.clearIcon"
          >
            <View
              scale={
                {
                  "value": 22,
                }
              }
              style={
                [
                  {
                    "alignItems": "stretch",
                    "aspectRatio": 1,
                  },
                  {
                    "opacity": 22,
                    "width": 22,
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "anticon",
                    "fontSize": 22,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        absolute={false}
        layout="column"
        parentType="modal"
        style={
          {
            "alignItems": "stretch",
            "alignSelf": "center",
            "flexDirection": "column",
            "margin": 11,
            "marginBottom": 22,
            "marginTop": 45,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexBasis": "auto",
              "flexGrow": 0,
              "flexShrink": 0,
              "justifyContent": "center",
              "margin": -11,
              "opacity": 1,
              "padding": 11,
            }
          }
        >
          <BVLinearGradient
            colors={
              [
                4280299823,
                4278214733,
              ]
            }
            endPoint={
              {
                "x": 1,
                "y": 0,
              }
            }
            locations={null}
            startPoint={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 34,
                  "flexDirection": "row",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "justifyContent": "center",
                },
                {
                  "alignSelf": "stretch",
                },
                {
                  "height": 67,
                  "paddingHorizontal": 34,
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <Text
              adjustsFontSizeToFit={true}
              minimumFontScale={0.65}
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "includeFontPadding": false,
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Medium",
                      "fontSize": 22,
                    },
                    null,
                  ],
                  null,
                ]
              }
            >
              Submit
            </Text>
          </BVLinearGradient>
        </View>
      </View>
    </View>
  </View>,
]
`;
